--- a/interests.html
+++ b/interests.html
@@ -10,7 +10,7 @@
     <head>
         <title>CPR - Activities</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="design.css">
+        <link rel="stylesheet" href="css/design.css">
     </head>
 
     <!--BODY-->
