--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <head>
         <title>CPR - Home Page</title>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="design.css">
+        <link rel="stylesheet" href="css/design.css">
     </head>
 
     <!--BODY-->
